[BUGFIX] This keeps the menu on top of all page elements when its open as some elements had a higher z-index.

--- a/assets/css/dashboard-css-2024.css
+++ b/assets/css/dashboard-css-2024.css
@@ -212,6 +212,7 @@ body {
     padding:8px;
     top:33px;
     left:0% !important;
+    z-index: 999;
 }
 
 .dropdown li {
